--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
     </div>
 
     <!-- Full-screen Music Player Overlay -->
-    <div class="full-screen-player-overlay hidden" id="fullScreenPlayer">
+    <!-- Removed 'hidden' class from here, now controlled by CSS transition -->
+    <div class="full-screen-player-overlay" id="fullScreenPlayer">
         <div class="full-screen-player-header">
             <i class="fas fa-chevron-down close-full-player-btn" id="closeFullScreenPlayerBtn"></i>
             <div class="full-screen-track-info">
@@ -221,3 +222,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
